# gdown-rs

./: Cargo.toml  LICENSE  README.md
src/: downloader.rs  google_drive.rs  main.rs  web.rs
