[package]
name = "gdown"
description = "Utility to easily download files from public google drive shares"
version = "0.1.0"
license = "MIT"
readme = "README.md"
edition = "2021"
authors = ["DepriSheep"]
repository = "https://github.com/Vernoxvernax/gdown-rs"

[dependencies]
isahc = "1.7.2"
serde = "1.0.197"
serde_json = "1.0.114"
serde_derive = "1.0.197"
urlencoding = "2.1.3"
regex = "1.10.4"
clap = "4.5.3"
crossterm = "0.27.0"
indicatif = "0.17.8"
md5 = "0.7.0"
