[package]
name = "gdown"
description = "Utility to easily download files from public google drive shares"
version = "0.1.1"
license = "MIT"
readme = "README.md"
edition = "2021"
authors = ["DepriSheep"]
repository = "https://github.com/Vernoxvernax/gdown-rs"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = "1.0.219"
urlencoding = "2.1.3"
regex = "1.11.1"
clap = "4.5.34"
crossterm = "0.28.1"
indicatif = "0.17.11"
md5 = "0.7.0"
reqwest = { version = "0.12.15", features = ["blocking", "stream"] }
tokio = { version = "1.44.1", features = ["full"] }
async-trait = "0.1.88"
futures-util = "0.3.31"
